Fix input on iPhone

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2674,5 +2674,11 @@ form {
     background-color: #fdc500;
     box-sizing: border-box;
 }
-
+input, input:before, input:after {
+    -webkit-user-select: initial;
+    -khtml-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
+}
 /*# sourceMappingURL=styles.css.map */
